[minor/html] try to repair too much or too many <div> closed in the case of oef exercises - div must be closed in the theme, not in public_html/html/homeref_xx.phtml
git-svn-id: https://subversion.renater.fr/wimsdev/trunk@3044 b48fb02d-6135-0410-b1dd-deb767c81da9

--- a/wims/public_html/themes/standard/css.css
+++ b/wims/public_html/themes/standard/css.css
@@ -1,6 +1,12 @@
 
 /** Standard Theme  -  css.CSS */
 
+body {
+    margin: 0px;
+    padding: 0px 10px 10px 10px;
+    font-family: arial, verdana, helvetica, sans-serif;
+    font-size: 0.9em;
+}
 
 /* WIMS BOXES */
 #wimsbodybox {
@@ -135,10 +141,10 @@ a:hover {
 
 #wimsbodybox #wimsmenutab .wimsmenu .menuitem {
   display: inline-block;
-  padding: 5px 30px;
+  padding: 1px 10px;
   text-decoration: none;
   border: thin black solid;
-  -moz-border-radius : 0px 0px 20px 0px;
+  -moz-border-radius : 20px 20px 0px 0px;
 }
 #wimsbodybox #wimsmenutab .wimsmenu .itemsep{
   display: inline-block;
@@ -305,7 +311,7 @@ h2.wims_subtitle {
 
 h1.oeftitle {
   text-align:center;
-  font-size:110%;
+  font-size:100%;
 }
 
 /******* END OF TITLES *********/
@@ -381,6 +387,48 @@ font-weight:bold;
   display:inline;
 }
 
+/** Boutons CSS3 **/
+ .wims_bouton{
+     display:inline-block;
+     width:auto;
+     
+     font-family: 'AllerBold', Arial, Helvetica, sans-serif;
+
+     margin-bottom: 0.1em;
+     padding:0.2em 0.6em;
+     
+     border:1px solid rgba(0, 0, 0, 0.25);
+     background-color:#263248;
+     color:#FFFFFF;
+     
+     cursor:pointer;
+     overflow:visible;
+     position:relative;
+     text-decoration:none;
+     
+     border-radius:7px;
+     -moz-border-radius:7px;
+     -webkit-border-radius:7px;
+     
+     background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(255,255,255,0)), to(rgba(255,255,255,0.25)));
+     background-image: -moz-linear-gradient(bottom, rgba(255,255,255,0), rgba(255,255,255,0.25));
+     
+     text-shadow:0 -1px 1px rgba(0, 0, 0, 0.5);
+     -webkit-box-shadow: rgba(255, 255, 255, 0.75) 0px 1px 1px;
+     -moz-box-shadow: rgba(255, 255, 255, 0.75) 0px 1px 1px;
+
+     font-size: 0.7em;
+     height: 1.6em;
+     line-height: 1.45em;
+     
+     font-weight:bold;
+     text-decoration:none;
+ }
+
+ a.wims_bouton:hover {
+     background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0,0,0,0.25)), to(rgba(0,0,0,0)));
+     background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0.25), rgba(0,0,0,0));
+ }
 
 /********************/
 /*    TABLES STYLES */
@@ -389,7 +437,15 @@ table.wimstable {
   width:90%;
   border-collapse:collapse;
   border: 1px solid #999;
+  font-size: .9em;
 }
+table.wimstable caption {
+  font-weight: bold;
+  font-size: 1.1em;
+  border: 1px solid #999;
+}
+
+
 table.wimstable th {
   border-collapse:collapse;
   border: 1px solid #999;
@@ -794,7 +850,6 @@ div.wims_solution {
 .wimsbody {
   font-family:serif;
   background:white;
-  font-size:12pt;
   font-family:"Times New Roman", serif;
   margin-left: auto;
   margin-right:auto;
